--- a/src/app/component_home/home/product/product.component.css
+++ b/src/app/component_home/home/product/product.component.css
@@ -1,4 +1,4 @@
-* Custom height and centering polyItem */
+/* Custom height and centering polyItem */
 .poly-item{
 	border:solid 1px var(--mainColor);
 }
