fix header image

--- a/src/app/component_home/header/header.component.html
+++ b/src/app/component_home/header/header.component.html
@@ -7,16 +7,16 @@
   </div>
   <div class="carousel-inner">
     <div class="carousel-item active" data-bs-interval="3000">
-      <img src="/assets/banner/1.JPG" class="d-block w-100" alt="...">
+      <img [src]="headerImageUrl+'1.JPG'" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="3000">
-      <img src="/assets/banner/2.JPG" class="d-block w-100" alt="...">
+      <img [src]="headerImageUrl+'2.JPG'" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="3000">
-      <img src="/assets/banner/3.JPG" class="d-block w-100" alt="...">
+      <img [src]="headerImageUrl+'3.JPG'" class="d-block w-100" alt="...">
     </div>
     <div class="carousel-item" data-bs-interval="3000">
-      <img src="/assets/banner/4.JPG" class="d-block w-100" alt="...">
+      <img [src]="headerImageUrl+'4.JPG'" class="d-block w-100" alt="...">
     </div>
   </div>
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
